Fix minor issue with avatar size on small screens

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1067,8 +1067,10 @@ body.homepage {
 		img {
 			height: var(--avatar-size);
 			width: var(--avatar-size);
+			min-width: var(--avatar-size);
+			min-height: var(--avatar-size);
 			border-radius: 50%;
-            object-fit: cover;
+			object-fit: cover;
 		}
 
 		#text {
